correction bugs tir version 0.0.0

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,18 +1,20 @@
-/Affichage/
 /music/
 /resources/
-/todo/
-/option/
-/personnage/
-/partie/
+/Affichage/
+/choixNiveau/
 /collision/
+/convertisseur/
 /credit/
 /deplacement/
 /deplacement_tir/
 /editeur/
 /menuPrincipal/
 /monstre/
+/observer/
+/option/
+/partie/
+/personnage/
 /principal/
 /serialize/
+/todo/
 /types/
-/choixNiveau/
